agent-demo/content/agent-infra/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          codec_type: AUTO
          stat_prefix: ingress_https
          route_config:
            name: local_route
            virtual_hosts:
            - name: https
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                  grpc: {}
                route:
                  cluster: clouddriver-grpc
                  timeout: 3600s
          http_filters:
            # JWT configuration go to Google
          # - name: envoy.filters.http.jwt_authn
          #   config:
          #     providers:
          #       google:
          #         issuer: https://accounts.google.com
          #         # If not specified audience won't be checked
          #         audiences: ["service-account-email-here"]
          #         # Keep the JWT in the request
          #         forward: true
          #         remote_jwks:
          #           http_uri:
          #             # coming from https://accounts.google.com/.well-known/openid-configuration
          #             uri: https://www.googleapis.com/oauth2/v3/certs
          #             cluster: googleapis_cluster
          #             timeout: 10s
          #     rules:
          #     - match:
          #         prefix: "/healthz"
          #     - match:
          #         prefix: "/agent"
          #       requires:
          #         provider_name: "google"
          - name: envoy.health_check
            config:
              pass_through_mode: false
              headers:
              - name: ":path"
                exact_match: "/healthz"
              - name: "x-envoy-livenessprobe"
                exact_match: "healthz"
          - name: envoy.router
            config: {}
      tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: "/etc/ssl/envoy/tls.crt"
            private_key:
              filename: "/etc/ssl/envoy/tls.key"
  clusters:
  - name: clouddriver-grpc
    connect_timeout: 0.5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: clouddriver-grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: spin-clouddriver-grpc-ingress.envoy.svc.cluster.local
                port_value: 9091
    health_checks:
      timeout: 1s
      interval: 30s
      unhealthy_threshold: 2
      healthy_threshold: 2
      grpc_health_check: {}
  - name: googleapis_cluster
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address:
          address: googleapis.com
          port_value: 443
    tls_context: { sni: www.googleapis.com }      
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 8090
